[gd_scene load_steps=25 format=3 uid="uid://bktrnqn74ivy6"]

[ext_resource type="Script" path="res://scenes/Battle/BattleScene.gd" id="1_13yon"]
[ext_resource type="Theme" uid="uid://bng4fw7qgudbo" path="res://resources/battle_theme.tres" id="2_7oklo"]
[ext_resource type="Texture2D" uid="uid://tyqqhxexgir5" path="res://assets/characters/cultist_battle.png" id="2_54gm7"]
[ext_resource type="PackedScene" uid="uid://b4ujejr1mllwk" path="res://scenes/Battle/HealthBar.tscn" id="2_u3t3p"]
[ext_resource type="Texture2D" uid="uid://c6342ms6275f3" path="res://assets/BattleUI/dungeon_battle_bg.png" id="3_cgtbq"]
[ext_resource type="SpriteFrames" uid="uid://cq0e4hj3af4w3" path="res://SpriteFrames/little_girl.tres" id="3_ev255"]
[ext_resource type="AudioStream" uid="uid://bq6s588b0lv6e" path="res://assets/music and sound/55_Encounter_02.wav" id="4_y0oju"]
[ext_resource type="AudioStream" uid="uid://cl5m0qw84y8fj" path="res://assets/music and sound/sound fx/22_Slash_04.wav" id="6_ysyvb"]
[ext_resource type="AudioStream" uid="uid://dyor2yewihhsf" path="res://assets/music and sound/sound fx/69_Enemy_death_01.wav" id="7_ptdl1"]
[ext_resource type="Script" path="res://scenes/Battle/PlayerMenu.gd" id="9_qqbkh"]
[ext_resource type="Texture2D" uid="uid://dkv7dkukhte8s" path="res://assets/BattleUI/Arrow.png" id="10_cwnij"]
[ext_resource type="Texture2D" uid="uid://bojt88v5geor5" path="res://assets/BattleUI/Arrow_highlighted.png" id="11_y7l37"]
[ext_resource type="Texture2D" uid="uid://djmnmkfhpo5u5" path="res://assets/BattleUI/Arrow_disabled.png" id="12_xa76t"]

[sub_resource type="AtlasTexture" id="AtlasTexture_ilcj6"]
atlas = ExtResource("2_54gm7")
region = Rect2(100, 0, 50, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_i3xkq"]
atlas = ExtResource("2_54gm7")
region = Rect2(150, 0, 50, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_kamfg"]
atlas = ExtResource("2_54gm7")
region = Rect2(200, 0, 50, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_qsata"]
atlas = ExtResource("2_54gm7")
region = Rect2(250, 0, 50, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_4qkh5"]
atlas = ExtResource("2_54gm7")
region = Rect2(300, 0, 50, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_g3ngr"]
atlas = ExtResource("2_54gm7")
region = Rect2(350, 0, 50, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_4v3xo"]
atlas = ExtResource("2_54gm7")
region = Rect2(400, 0, 50, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_qnd8t"]
atlas = ExtResource("2_54gm7")
region = Rect2(0, 0, 50, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_3np6c"]
atlas = ExtResource("2_54gm7")
region = Rect2(50, 0, 50, 80)

[sub_resource type="SpriteFrames" id="SpriteFrames_x8p4w"]
resource_local_to_scene = true
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ilcj6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i3xkq")
}],
"loop": false,
"name": &"Attack",
"speed": 2.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_kamfg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qsata")
}],
"loop": false,
"name": &"Damaged",
"speed": 2.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_4qkh5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_g3ngr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4v3xo")
}],
"loop": false,
"name": &"Defeated",
"speed": 2.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_qnd8t")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3np6c")
}],
"loop": true,
"name": &"Idle",
"speed": 1.0
}]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_2dclt"]
bg_color = Color(0, 0, 0, 0.552941)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[node name="BattleScene" type="Node2D"]
process_mode = 3
script = ExtResource("1_13yon")

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = 10

[node name="TextureRect" type="TextureRect" parent="CanvasLayer"]
offset_right = 480.0
offset_bottom = 270.0
texture = ExtResource("3_cgtbq")

[node name="Panel" type="Panel" parent="CanvasLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_7oklo")

[node name="EnemyRect" type="AnimatedSprite2D" parent="CanvasLayer"]
unique_name_in_owner = true
position = Vector2(-123, 10)
scale = Vector2(2, 2)
sprite_frames = SubResource("SpriteFrames_x8p4w")
animation = &"Idle"
autoplay = "Idle"
offset = Vector2(25, 40)

[node name="PlayerRect" type="AnimatedSprite2D" parent="CanvasLayer"]
unique_name_in_owner = true
position = Vector2(600, 175)
scale = Vector2(2, 2)
sprite_frames = ExtResource("3_ev255")
animation = &"Use"
autoplay = "Idle"

[node name="FightIntro" type="Control" parent="CanvasLayer"]
unique_name_in_owner = true
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="CanvasLayer/FightIntro"]
layout_mode = 0
offset_left = 79.0
offset_top = 94.0
offset_right = 389.0
offset_bottom = 154.0
text = "Some fight will happen soon!"
horizontal_alignment = 1

[node name="IntroEffect" type="AudioStreamPlayer" parent="CanvasLayer/FightIntro"]
unique_name_in_owner = true
stream = ExtResource("4_y0oju")

[node name="FightControls" type="Control" parent="CanvasLayer"]
unique_name_in_owner = true
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_7oklo")

[node name="StatContainer" type="PanelContainer" parent="CanvasLayer/FightControls"]
layout_mode = 0
offset_left = 26.0
offset_top = 16.0
offset_right = 196.0
offset_bottom = 71.0
theme_override_styles/panel = SubResource("StyleBoxFlat_2dclt")

[node name="PlayerHealthBar" parent="CanvasLayer/FightControls/StatContainer" instance=ExtResource("2_u3t3p")]
unique_name_in_owner = true

[node name="AttackSound" type="AudioStreamPlayer" parent="CanvasLayer/FightControls"]
unique_name_in_owner = true
stream = ExtResource("6_ysyvb")

[node name="PanelContainer" type="PanelContainer" parent="CanvasLayer/FightControls"]
layout_mode = 2
offset_left = 186.0
offset_top = 200.0
offset_right = 456.0
offset_bottom = 246.0

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/FightControls/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/FightControls/PanelContainer/MarginContainer"]
layout_mode = 2

[node name="PlayerMenu" type="GridContainer" parent="CanvasLayer/FightControls/PanelContainer/MarginContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
columns = 2
script = ExtResource("9_qqbkh")

[node name="MenuButton1" type="Button" parent="CanvasLayer/FightControls/PanelContainer/MarginContainer/HBoxContainer/PlayerMenu"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "Actions"

[node name="MenuButton2" type="Button" parent="CanvasLayer/FightControls/PanelContainer/MarginContainer/HBoxContainer/PlayerMenu"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "Summons
"

[node name="MenuButton3" type="Button" parent="CanvasLayer/FightControls/PanelContainer/MarginContainer/HBoxContainer/PlayerMenu"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "items"

[node name="MenuButton4" type="Button" parent="CanvasLayer/FightControls/PanelContainer/MarginContainer/HBoxContainer/PlayerMenu"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "run"

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/FightControls/PanelContainer/MarginContainer/HBoxContainer"]
layout_mode = 2

[node name="PageUpButton" type="TextureButton" parent="CanvasLayer/FightControls/PanelContainer/MarginContainer/HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
texture_normal = ExtResource("10_cwnij")
texture_hover = ExtResource("11_y7l37")
texture_disabled = ExtResource("12_xa76t")

[node name="PageDownButton" type="TextureButton" parent="CanvasLayer/FightControls/PanelContainer/MarginContainer/HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
texture_normal = ExtResource("10_cwnij")
texture_hover = ExtResource("11_y7l37")
texture_disabled = ExtResource("12_xa76t")
flip_v = true

[node name="AttackPanel" type="PanelContainer" parent="CanvasLayer/FightControls"]
unique_name_in_owner = true
modulate = Color(1, 1, 1, 0)
layout_mode = 0
offset_left = 148.0
offset_top = 95.0
offset_right = 348.0
offset_bottom = 135.0

[node name="AttackLabel" type="Label" parent="CanvasLayer/FightControls/AttackPanel"]
unique_name_in_owner = true
layout_mode = 2
vertical_alignment = 1

[node name="VictoryPanel" type="PanelContainer" parent="CanvasLayer"]
unique_name_in_owner = true
offset_left = 180.0
offset_top = -190.0
offset_right = 333.0
offset_bottom = -92.0
theme = ExtResource("2_7oklo")

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/VictoryPanel"]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/VictoryPanel/MarginContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="CanvasLayer/VictoryPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Victory"
horizontal_alignment = 1

[node name="BackToGameButton" type="Button" parent="CanvasLayer/VictoryPanel/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
action_mode = 0
text = "Back to game"

[node name="VictorySound" type="AudioStreamPlayer" parent="CanvasLayer/VictoryPanel"]
unique_name_in_owner = true
stream = ExtResource("7_ptdl1")

[connection signal="animation_finished" from="CanvasLayer/EnemyRect" to="." method="_on_enemy_rect_animation_finished"]
[connection signal="animation_looped" from="CanvasLayer/EnemyRect" to="." method="_on_enemy_rect_animation_finished"]
[connection signal="animation_finished" from="CanvasLayer/PlayerRect" to="." method="_on_player_rect_animation_finished"]
[connection signal="animation_looped" from="CanvasLayer/PlayerRect" to="." method="_on_player_rect_animation_finished"]
[connection signal="pressed" from="CanvasLayer/FightControls/PanelContainer/MarginContainer/HBoxContainer/PlayerMenu/MenuButton1" to="CanvasLayer/FightControls/PanelContainer/MarginContainer/HBoxContainer/PlayerMenu" method="_actions_menu_pressed"]
[connection signal="pressed" from="CanvasLayer/FightControls/PanelContainer/MarginContainer/HBoxContainer/PlayerMenu/MenuButton2" to="CanvasLayer/FightControls/PanelContainer/MarginContainer/HBoxContainer/PlayerMenu" method="_summons_menu_pressed"]
[connection signal="pressed" from="CanvasLayer/FightControls/PanelContainer/MarginContainer/HBoxContainer/PlayerMenu/MenuButton3" to="CanvasLayer/FightControls/PanelContainer/MarginContainer/HBoxContainer/PlayerMenu" method="_items_menu_pressed"]
[connection signal="pressed" from="CanvasLayer/FightControls/PanelContainer/MarginContainer/HBoxContainer/VBoxContainer/PageUpButton" to="CanvasLayer/FightControls/PanelContainer/MarginContainer/HBoxContainer/PlayerMenu" method="_on_page_up_button"]
[connection signal="pressed" from="CanvasLayer/FightControls/PanelContainer/MarginContainer/HBoxContainer/VBoxContainer/PageDownButton" to="CanvasLayer/FightControls/PanelContainer/MarginContainer/HBoxContainer/PlayerMenu" method="_on_page_down_button"]
[connection signal="pressed" from="CanvasLayer/VictoryPanel/MarginContainer/VBoxContainer/BackToGameButton" to="." method="_on_back_to_game_button_pressed"]
